syntax="proto3";

package checker;

option go_package="pkg/checker-api";

service Checker {
    rpc CheckLinks(CheckRequest) returns (CheckResponse);
}

message CheckRequest {
    repeated string links = 1;
}

message CheckResponse {
    repeated Link links = 1;
}


message Link {
    string link = 1;
    bool status = 2;
}

